--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,8 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="index.html" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none; color: inherit;">
+                        <img src="app-icon.png" alt="Slouch AI Icon" class="app-icon">
                         <h1>Slouch AI</h1>
                     </a>
                 </div>
@@ -194,7 +195,7 @@
                 <p>If you have questions about this privacy policy or our data practices:</p>
                 <ul>
                     <li>Email: <a href="mailto:privacy@slouchai.app">privacy@slouchai.app</a></li>
-                    <li>In-app: Settings ’ Privacy ’ Contact Support</li>
+                    <li>In-app: Settings ï¿½ Privacy ï¿½ Contact Support</li>
                 </ul>
                 <p>False Summit Solutions LLC<br>
                 Developer of Slouch AI</p>
@@ -210,7 +211,7 @@
                     <a href="mailto:support@slouchai.app">Contact</a>
                 </div>
                 <div class="copyright">
-                    © 2025 Slouch AI. All rights reserved.
+                    ï¿½ 2025 Slouch AI. All rights reserved.
                 </div>
             </div>
         </footer>
