--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,8 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="index.html" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none; color: inherit;">
+                        <img src="app-icon.png" alt="Slouch AI Icon" class="app-icon">
                         <h1>Slouch AI</h1>
                     </a>
                 </div>
@@ -272,7 +273,7 @@
                     <a href="mailto:support@slouchai.app">Contact</a>
                 </div>
                 <div class="copyright">
-                    © 2025 Slouch AI. All rights reserved.
+                    ï¿½ 2025 Slouch AI. All rights reserved.
                 </div>
             </div>
         </footer>
