Updated terms and privacy for new facebook sdk

--- a/privacy.html
+++ b/privacy.html
@@ -89,6 +89,15 @@
                     <li>Crash reports and performance diagnostics</li>
                     <li>Subscription and purchase events</li>
                 </ul>
+
+                <h3>1.7 Advertising and Tracking Data</h3>
+                <p>If you grant tracking permission, we may collect:</p>
+                <ul>
+                    <li><strong>Device Identifier (IDFA):</strong> Apple's Identifier for Advertisers, used to measure ad effectiveness</li>
+                    <li><strong>Purchase Events:</strong> Information about in-app purchases for ad campaign optimization</li>
+                    <li><strong>App Events:</strong> Interactions such as viewing the paywall, initiating checkout, and completing purchases</li>
+                </ul>
+                <p>This data is shared with Meta (Facebook) to measure and optimize advertising campaigns. You can control this through the App Tracking Transparency prompt or your device's privacy settings.</p>
             </section>
 
             <section>
@@ -170,10 +179,20 @@
                 </ul>
                 <p>Privacy Policy: <a href="https://www.revenuecat.com/privacy" target="_blank">revenuecat.com/privacy</a></p>
 
-                <h3>4.5 Apple and Google</h3>
+                <h3>4.5 Meta (Facebook)</h3>
+                <ul>
+                    <li><strong>Facebook SDK:</strong> Used for advertising measurement and optimization</li>
+                    <li><strong>Aggregated Event Measurement (AEM):</strong> Privacy-preserving framework for measuring ad effectiveness on iOS</li>
+                    <li>Receives purchase events and app interaction data when tracking is permitted</li>
+                    <li>Data is used to optimize advertising campaigns and measure return on ad spend</li>
+                </ul>
+                <p>Privacy Policy: <a href="https://www.facebook.com/privacy/policy/" target="_blank">facebook.com/privacy/policy</a></p>
+
+                <h3>4.6 Apple and Google</h3>
                 <ul>
                     <li>Sign-In services for authentication</li>
                     <li>App Store for purchases and subscriptions</li>
+                    <li>SKAdNetwork for privacy-preserving ad attribution</li>
                 </ul>
             </section>
 
@@ -198,6 +217,14 @@
 
                 <h3>5.4 Notifications</h3>
                 <p>You can disable posture check-in reminders through the app settings or your device's notification settings.</p>
+
+                <h3>5.5 Advertising Tracking</h3>
+                <ul>
+                    <li><strong>App Tracking Transparency (ATT):</strong> When you first open the app, you will be prompted to allow or deny tracking. You can change this decision at any time.</li>
+                    <li><strong>Device Settings:</strong> Go to Settings &rarr; Privacy &amp; Security &rarr; Tracking to manage which apps can track your activity</li>
+                    <li><strong>Limit Ad Tracking:</strong> Go to Settings &rarr; Privacy &amp; Security &rarr; Apple Advertising to limit personalized ads</li>
+                    <li>If you deny tracking, your device identifier will not be shared with advertising partners, but you may still see ads (they just won't be personalized)</li>
+                </ul>
             </section>
 
             <section>
