--- a/terms.html
+++ b/terms.html
@@ -174,6 +174,15 @@
                     <li>The App requires motion permission for AirPods posture monitoring</li>
                     <li>You can revoke these permissions at any time through device settings</li>
                 </ul>
+
+                <h3>7.4 Advertising and Tracking</h3>
+                <ul>
+                    <li>We use Meta (Facebook) SDK to measure advertising effectiveness and optimize ad campaigns</li>
+                    <li>When you first open the App, you will be prompted to allow or deny tracking via Apple's App Tracking Transparency framework</li>
+                    <li>If you allow tracking, your device identifier and purchase events may be shared with Meta for advertising purposes</li>
+                    <li>You can change your tracking preference at any time in your device's Settings under Privacy &amp; Security &rarr; Tracking</li>
+                    <li>Denying tracking does not affect core app functionality</li>
+                </ul>
             </section>
 
             <section>
@@ -212,7 +221,7 @@
                 <ul>
                     <li>We are not liable for any indirect, incidental, special, consequential, or punitive damages</li>
                     <li>Our total liability shall not exceed the amount you paid for the App in the past 12 months</li>
-                    <li>We are not responsible for third-party services, AI outputs, or content</li>
+                    <li>We are not responsible for third-party services (including AI providers and advertising partners), their outputs, or content</li>
                     <li>We are not liable for any health issues arising from following App recommendations</li>
                 </ul>
             </section>
